Don't use an @organization variable, get it from @member

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -51,7 +51,7 @@
     <div class="control-group">
   		<div class="controls">
         <section class='preview'>
-          <%= render :partial => 'organizations/organization', :locals => { :organization => @organization } %>
+          <%= render :partial => 'organizations/organization', :locals => { :organization => @member.organization } %>
         </section>
       </div>
     </div>
