--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,2 +1,1 @@
-<h1>Members#show</h1>
-<p>Find me in app/views/members/show.html.erb</p>
+<%= render :partial => 'organizations/organization', :locals => {:organization => @organization}%>
