--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -14,7 +14,12 @@ div.organization {
 div.organization-summary {
   border-bottom: 1px solid #7ebbe4;
   padding-bottom: 10px;
-  min-height: 100px;
+  min-height: 140px;
+}
+
+div.organization-summary div.organization-logo {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 div.organization-summary div.organization-description {
