--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -9,7 +9,7 @@
   <i class='icon icon-home'></i> <a href='<%= organization.url %>'><%= organization.url%></a>
 
   <div class='organization-description'>
-    <%= truncate(organization.description, :length => 450, :separator => ' ', :omission => " ...") %>
+    <%= organization_description(organization) %>
   </div>
 
 </div>
