--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -7,7 +7,7 @@
 
 <%= error_messages(@contact_request) %>
 
-<%= form_for(@contact_request, :html => {:class => 'form-horizontal'}) do |f| %>
+<%= form_for(@contact_request, :url => member_registration_path, :html => {:class => 'form-horizontal'}) do |f| %>
 
   <div class='control-group'>
     <%= f.label :person_name, :class => 'control-label' %>
