Move edit action to member path for current user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
               </ul>
     					<ul class="nav pull-right">
                 <% if signed_in? %>
-                  <li><%= link_to "My Account", edit_member_path(current_member) %></li>
+                  <li><%= link_to "My Account", member_path(current_member) %></li>
                   <li><%= link_to "Sign out", session_path, :method => :delete %></li>
                 <% else %>
                   <li><%= link_to "Sign in", new_session_path %></li>
