--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -8,6 +8,14 @@
     <legend>Account Details</legend>
 
     <div class="control-group">
+  		<%= f.label :membership_number, :class => 'control-label' %>
+  		<div class="controls">
+  			<span class="input-large uneditable-input"><%= @member.membership_number %></span>
+        <span class="help-inline">(your login name)</span>
+  		</div>
+  	</div>
+
+    <div class="control-group">
   		<%= f.label :email, :class => 'control-label' %>
   		<div class="controls">
   			<%= f.email_field :email %>
