Fix internal organization naming
Great big search/replace

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -18,9 +18,9 @@
   </div>
 
   <div class="control-group">
-  	<%= f.label :organisation_name, :class => 'control-label' %>
+  	<%= f.label :organization_name, :class => 'control-label' %>
   	<div class="controls">
-  		<%= f.text_field :organisation_name %>
+  		<%= f.text_field :organization_name %>
   	</div>
   </div>
 
@@ -83,9 +83,9 @@
   <legend>Financial information</legend>
     
   <div class="control-group">
-  	<%= f.label :organisation_vat_id, :class => 'control-label' %>
+  	<%= f.label :organization_vat_id, :class => 'control-label' %>
   	<div class="controls">
-  		<%= f.text_field :organisation_vat_id %>
+  		<%= f.text_field :organization_vat_id %>
   	</div>
   </div>
 
