Make org naming consistent

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -42,7 +42,7 @@
   
   <fieldset>   
     
-    <legend>Organization Details</legend>
+    <legend>Organisation Details</legend>
     
     <%= f.fields_for :organization do |builder| %>
       <%= render :partial => 'organizations/form', :locals => { :f => builder } %>
