--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -1,7 +1,7 @@
 <div class='organization organization-summary'>
 
   <div class='organization-logo pull-right'
-       style='background-image: url(<%= organization.logo %>)'>
+       style='background-image: url(<%= organization.logo.rectangular.url %>)'>
   </div>
 
   <h2><%= link_to organization.name, organization.member %></h2>
