--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -1,15 +1,15 @@
-<div class='organization'>
+<div class='organization' vocab="http://schema.org/" typeOf="Organization">
 
-  <h2<% if @preview %> data-bind="text: name"<% end %>><%= organization.name %></h2>
+  <h2 property="name"<% if @preview %> data-bind="text: name"<% end %>><%= organization.name %></h2>
 
   <div class='organization-logo pull-right' 
        style='background-image: url(<%= organization.logo %>)'
        <% if @preview %> data-bind='style: {backgroundImage: imageSrc}'<% end %> >
   </div>
 
-  <i class='icon icon-home'></i> <a<% if @preview %> data-bind="text: url, attr: {href: url}"<% end %> href='<%= organization.url %>'><%= organization.url%></a>
+  <i class='icon icon-home'></i> <a property="url"<% if @preview %> data-bind="text: url, attr: {href: url}"<% end %> href='<%= organization.url %>'><%= organization.url%></a>
 
-  <div class='organization-description'>
+  <div class='organization-description' property="description">
     <% if @preview %>
       <div data-bind="html: formattedDescription"></div>
     <% else %>
