remove newline inside description div

--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -8,8 +8,6 @@
 
   <i class='icon icon-home'></i> <%= link_to organization.url, organization.url, :property => "url"%></a>
 
-  <div class='organization-description' property="description">
-    <%= organization_description(organization) %>
-  </div>
+  <div class='organization-description' property="description"><%= organization_description(organization) %></div>
 
 </div>
