--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -10,6 +10,12 @@ div.organization {
   margin-top: 10px;
   min-height: 150px;
 }
+  
+@media screen and (min-width: 768px) {
+  div.organization-content {
+    padding-right: 200px;
+  }
+}
 
 div.organization-summary {
   border-bottom: 1px solid #7ebbe4;
