--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -2,19 +2,25 @@
 
   <h2 property="name"<% if @preview %> data-bind="text: name"<% end %>><%= organization.name %></h2>
 
-  <div class='organization-logo pull-right' 
-       style='background-image: url(<%= organization.logo.rectangular.url %>)'
-       <% if @preview %> data-bind='style: {backgroundImage: imageSrc}'<% end %> >
-  </div>
+  <% unless @member.supporter? %>
+    <div class='organization-logo pull-right' 
+         style='background-image: url(<%= organization.logo.rectangular.url %>)'
+         <% if @preview %> data-bind='style: {backgroundImage: imageSrc}'<% end %> >
+    </div>
+  <% end %>
 
-  <i class='icon icon-home'></i> <a property="url"<% if @preview %> data-bind="text: url, attr: {href: url}"<% end %> href='<%= organization.url %>'><%= organization.url%></a>
+  <div class='<%= @member.supporter? ? '' : 'organization-content' %>'>
+  
+    <i class='icon icon-home'></i> <a property="url"<% if @preview %> data-bind="text: url, attr: {href: url}"<% end %> href='<%= organization.url %>'><%= organization.url%></a>
 
-  <div class='organization-description' property="description" datatype="rdf:HTML">
-    <% if @preview %>
-      <div data-bind="html: formattedDescription"></div>
-    <% else %>
-      <%= simple_format(organization.description) %>
-    <% end %>
+    <div class='organization-description' property="description" datatype="rdf:HTML">
+      <% if @preview %>
+        <div data-bind="html: formattedDescription"></div>
+      <% else %>
+        <%= simple_format(organization.description) %>
+      <% end %>
+    </div>
+    
   </div>
 
   <% if @preview %>
