--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -26,24 +26,6 @@
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
   
-    <legend>Change Password</legend>
-
-    <div class="control-group">
-  		<%= f.label :password, :class => 'control-label' %>
-  		<div class="controls">
-  			<%= f.password_field :password %>
-  		</div>
-  	</div>
-  
-    <div class="control-group">
-  		<%= f.label :password_confirmation, :class => 'control-label' %>
-  		<div class="controls">
-  			<%= f.password_field :password_confirmation %>
-  		</div>
-  	</div>
-  
-  </fieldset>
-  
   <fieldset>   
     <% render :partial => 'devise/registrations/member_details', :locals => { :f => f } %>
   </fieldset>
@@ -64,6 +46,26 @@
       </div>
     </div>
 
+  </fieldset>
+  
+  <fieldset>
+
+    <legend>Change Password</legend>
+
+    <div class="control-group">
+  		<%= f.label :password, :class => 'control-label' %>
+  		<div class="controls">
+  			<%= f.password_field :password %>
+  		</div>
+  	</div>
+  
+    <div class="control-group">
+  		<%= f.label :password_confirmation, :class => 'control-label' %>
+  		<div class="controls">
+  			<%= f.password_field :password_confirmation %>
+  		</div>
+  	</div>
+  
   </fieldset>
 
   <fieldset>
