--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -26,10 +26,16 @@
   <% if @preview %>
     <script type="text/javascript">
         function OrganisationViewModel() {
-            this.name        = ko.observable("<%= organization.name %>");
-            this.description = ko.observable("<%= escape_javascript(organization.description) %>");
-            this.url         = ko.observable("<%= organization.url %>");
-            this.imageSrc    = ko.observable("url(<%= organization.logo.rectangular.url %>)");
+            this.name         = ko.observable("<%= organization.name %>");
+            this.description  = ko.observable("<%= escape_javascript(organization.description) %>");
+            this.url          = ko.observable("<%= organization.url %>");
+            this.imageSrc     = ko.observable("url(<%= organization.logo.rectangular.url %>)");
+            this.contactName  = ko.observable("<%= organization.cached_contact_name %>");
+            this.contactPhone = ko.observable("<%= organization.cached_contact_phone %>");
+            this.contactEmail = ko.observable("<%= organization.cached_contact_email %>");
+            this.twitter      = ko.observable("<%= organization.cached_twitter %>");
+            this.facebook     = ko.observable("<%= organization.cached_facebook %>");
+            this.linkedin     = ko.observable("<%= organization.cached_linkedin %>");
             this.formattedDescription = ko.computed(function() {
               str = this.description().replace(/\r\n?/, "\n");
               str = $.trim(str);
