--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -5,13 +5,15 @@
   <% unless @member.supporter? %>
     <div class='organization-logo pull-right' 
          style='background-image: url(<%= organization.logo.rectangular.url %>)'
-         <% if @preview %> data-bind='style: {backgroundImage: imageSrc}'<% end %> >
+         data-bind='style: {backgroundImage: imageSrc}' >
     </div>
   <% end %>
 
   <div class='<%= @member.supporter? ? '' : 'organization-content' %>'>
   
-    <i class='icon icon-home'></i> <a property="url"<% if @preview %> data-bind="text: url, attr: {href: url}"<% end %> href='<%= organization.url %>'><%= organization.url%></a>
+    <span>
+      <i class='icon icon-home'></i> <a property="url" data-bind="text: url, attr: {href: url}" href='<%= organization.url %>'><%= organization.url%></a>
+    </span>
 
     <div class='organization-description' property="description" datatype="rdf:HTML">
       <% if @preview %>
