Use FontAwesome instead of glyphicons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require_self
  *= require bootstrap.min
  *= require bootstrap-responsive.min
+ *= require font-awesome.min
  *= require_tree .
  */
  
