Style contact details more betterer

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -31,3 +31,8 @@ div.organization-summary div.organization-logo {
 div.organization-summary div.organization-description {
   min-height: auto;
 }
+
+span.contact-detail {
+  margin-right: 20px;
+  white-space: nowrap;
+}
