--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -11,19 +11,19 @@
 
   <div class='<%= @member.supporter? ? '' : 'organization-content' %>'>
   
-    <span>
-      <i class='icon icon-home'></i> <a property="url" data-bind="text: url, attr: {href: url}" href='<%= organization.url %>'><%= organization.url%></a>
+    <span class='contact-detail'>
+      <i class='icon icon-home'></i>&nbsp;<a property="url" data-bind="text: url, attr: {href: url}" href='<%= organization.url %>'><%= organization.url%></a>
     </span>
 
     <% if @preview || @organization.cached_contact_email %>
-      <span data-bind="visible: contactEmail().length > 0">
-        <i class='icon-envelope-alt'></i> <a property="email" data-bind="text: contactEmail, attr: {href: mailto}" href='mailto:<%= organization.cached_contact_email %>'><%= organization.cached_contact_email %></a>
+      <span data-bind="visible: contactEmail().length > 0" class='contact-detail'>
+        <i class='icon-envelope-alt'></i>&nbsp;<a property="email" data-bind="text: contactEmail, attr: {href: mailto}" href='mailto:<%= organization.cached_contact_email %>'><%= organization.cached_contact_email %></a>
       </span>
     <% end %>
     
     <% if @preview || @organization.cached_contact_phone %>
-      <span data-bind="visible: contactPhone().length > 0">
-        <i class='icon-phone-sign'></i> <span property="telephone" data-bind="text: contactPhone"><%= organization.cached_contact_phone %></span>
+      <span data-bind="visible: contactPhone().length > 0" class='contact-detail'>
+        <i class='icon-phone-sign'></i>&nbsp;<span property="telephone" data-bind="text: contactPhone"><%= organization.cached_contact_phone %></span>
       </span>
     <% end %>
 
