Add preview for contact name and social media links

--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -11,21 +11,29 @@
 
   <div class='<%= @member.supporter? ? '' : 'organization-content' %>'>
   
-    <span class='contact-detail'>
-      <i class='icon icon-home'></i>&nbsp;<a property="url" data-bind="text: url, attr: {href: url}" href='<%= organization.url %>'><%= organization.url%></a>
-    </span>
+    <div>
+      <span class='contact-detail'>
+        <i class='icon icon-home'></i> <a property="url" data-bind="text: url, attr: {href: url}" href='<%= organization.url %>'><%= organization.url%></a>
+      </span>
 
-    <% if @preview || @organization.cached_contact_email %>
-      <span data-bind="visible: contactEmail().length > 0" class='contact-detail'>
-        <i class='icon-envelope-alt'></i>&nbsp;<a property="email" data-bind="text: contactEmail, attr: {href: mailto}" href='mailto:<%= organization.cached_contact_email %>'><%= organization.cached_contact_email %></a>
-      </span>
-    <% end %>
+      <% if @preview || @organization.cached_contact_name %>
+        <span data-bind="visible: contactName().length > 0" class='contact-detail'>
+          <i class='icon-user'></i> <span property="contactPoint" data-bind="text: contactName"><%= organization.cached_contact_name %></span>
+        </span>
+      <% end %>
     
-    <% if @preview || @organization.cached_contact_phone %>
-      <span data-bind="visible: contactPhone().length > 0" class='contact-detail'>
-        <i class='icon-phone-sign'></i>&nbsp;<span property="telephone" data-bind="text: contactPhone"><%= organization.cached_contact_phone %></span>
-      </span>
-    <% end %>
+      <% if @preview || @organization.cached_contact_email %>
+        <span data-bind="visible: contactEmail().length > 0" class='contact-detail'>
+          <i class='icon-envelope-alt'></i> <a property="email" data-bind="text: contactEmail, attr: {href: mailto}" href='mailto:<%= organization.cached_contact_email %>'><%= organization.cached_contact_email %></a>
+        </span>
+      <% end %>
+    
+      <% if @preview || @organization.cached_contact_phone %>
+        <span data-bind="visible: contactPhone().length > 0" class='contact-detail'>
+          <i class='icon-phone-sign'></i> <span property="telephone" data-bind="text: contactPhone"><%= organization.cached_contact_phone %></span>
+        </span>
+      <% end %>
+    </div>
 
     <div class='organization-description' property="description" datatype="rdf:HTML">
       <% if @preview %>
@@ -35,6 +43,26 @@
       <% end %>
     </div>
     
+    <div>
+      <% if @preview || @organization.cached_twitter %>
+        <span data-bind="visible: twitter().length > 0" class='contact-detail'>
+          <i class='icon-twitter'></i> <a data-bind="text: twitter, attr: {href: twitterUrl}" href='http://twitter.com/<%= organization.cached_twitter %>'><%= organization.cached_twitter %></a>
+        </span>
+      <% end %>
+
+      <% if @preview || @organization.cached_facebook %>
+        <span data-bind="visible: facebook().length > 0" class='contact-detail'>
+          <i class='icon-facebook'></i> <a data-bind="text: facebookLabel, attr: {href: facebook}" href='<%= organization.cached_facebook %>'><%= organization.cached_facebook.split('/').last %></a>
+        </span>
+      <% end %>
+
+      <% if @preview || @organization.cached_linkedin %>
+        <span data-bind="visible: linkedin().length > 0" class='contact-detail'>
+          <i class='icon-linkedin-sign'></i> <a data-bind="text: linkedinLabel, attr: {href: linkedin}" href='<%= organization.cached_linkedin %>'><%= organization.cached_linkedin.split('/').last %></a>
+        </span>
+      <% end %>
+    </div>
+
   </div>
 
   <% if @preview %>
@@ -52,6 +80,15 @@
             this.linkedin     = ko.observable("<%= organization.cached_linkedin %>");
             this.mailto       = ko.computed(function() {
               return 'mailto:' + this.contactEmail();
+            }, this);
+            this.twitterUrl   = ko.computed(function() {
+              return 'http://twitter.com/' + this.twitter();
+            }, this);
+            this.facebookLabel= ko.computed(function() {
+              return this.facebook().split('/').pop();
+            }, this);
+            this.linkedinLabel= ko.computed(function() {
+              return this.linkedin().split('/').pop();
             }, this);
             this.formattedDescription = ko.computed(function() {
               str = this.description().replace(/\r\n?/, "\n");
